--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -401,7 +401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 27,
       "metadata": {
         "id": "SgGFrNvOso4K"
       },
@@ -414,7 +414,7 @@
             "0  1.07267  1.07297  1.07297  1.07259\n",
             "1  1.07297  1.07304  1.07320  1.07294\n",
             "1.0735499999999998    1.07277    1.07251    1.0732899999999999\n",
-            "{'orderCreateTransaction': {'id': '14', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '14', 'requestID': '25141190429682750', 'time': '2023-11-05T04:46:43.548031521Z', 'type': 'MARKET_ORDER', 'instrument': 'EUR_USD', 'units': '1000', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '1.07355', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '1.07277', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '15', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '14', 'requestID': '25141190429682750', 'time': '2023-11-05T04:46:43.548031521Z', 'type': 'ORDER_CANCEL', 'orderID': '14', 'reason': 'MARKET_HALTED'}, 'relatedTransactionIDs': ['14', '15'], 'lastTransactionID': '15'}\n"
+            "{'orderCreateTransaction': {'id': '18', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '18', 'requestID': '25141194129482634', 'time': '2023-11-05T05:01:25.303362009Z', 'type': 'MARKET_ORDER', 'instrument': 'EUR_USD', 'units': '1000', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '1.07355', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '1.07277', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '19', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '18', 'requestID': '25141194129482634', 'time': '2023-11-05T05:01:25.303362009Z', 'type': 'ORDER_CANCEL', 'orderID': '18', 'reason': 'MARKET_HALTED'}, 'relatedTransactionIDs': ['18', '19'], 'lastTransactionID': '19'}\n"
           ]
         }
       ],
@@ -423,7 +423,8 @@
         "\n",
         "#scheduler = BlockingScheduler()\n",
         "#scheduler.add_job(trading_job, 'cron', day_of_week='mon-fri', hour='00-23', minute='1,16,31,46', start_date='2022-01-12 12:00:00', timezone='America/Chicago')\n",
-        "#scheduler.start()"
+        "#scheduler.start()\n",
+        "#edit the file"
       ]
     },
     {
