--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 31,
       "metadata": {
         "id": "HDUx5opJso4E",
         "outputId": "7690265c-ce95-4865-8cca-03d60c47da16"
@@ -185,7 +185,7 @@
               "[3696 rows x 6 columns]"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -210,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 32,
       "metadata": {
         "id": "oh6erbtQso4H"
       },
@@ -251,7 +251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 33,
       "metadata": {
         "id": "-837Y7Elso4H",
         "outputId": "1456dcc4-0afe-48f1-cf77-c001ea7446a5"
@@ -267,7 +267,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -288,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 34,
       "metadata": {
         "id": "vViuxkdHso4I"
       },
@@ -304,7 +304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 35,
       "metadata": {
         "id": "ztFBEJacso4J",
         "outputId": "00070d9d-023c-48c4-da73-8eacf43674d4"
@@ -336,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 49,
       "metadata": {
         "id": "YDvk2yOSso4J"
       },
@@ -384,7 +384,7 @@
         "        print(rv)\n",
         "    #Buy\n",
         "    elif signal == 2:\n",
-        "        mo = MarketOrderRequest(instrument=\"EUR_USD\", units=1000, takeProfitOnFill=TakeProfitDetails(price=TPBuy).data, stopLossOnFill=StopLossDetails(price=SLBuy).data)\n",
+        "        mo = MarketOrderRequest(instrument=\"EUR_USD\", units=1, takeProfitOnFill=TakeProfitDetails(price=TPBuy).data, stopLossOnFill=StopLossDetails(price=SLBuy).data)\n",
         "        r = orders.OrderCreate(accountID, data=mo.data)\n",
         "        rv = client.request(r)\n",
         "        print(rv)"
@@ -401,7 +401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 70,
       "metadata": {
         "id": "SgGFrNvOso4K"
       },
@@ -413,18 +413,18 @@
             "      Open    Close     High      Low\n",
             "0  1.07267  1.07297  1.07297  1.07259\n",
             "1  1.07297  1.07304  1.07320  1.07294\n",
-            "1.0735499999999998    1.07277    1.07251    1.0732899999999999\n",
-            "{'orderCreateTransaction': {'id': '20', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '20', 'requestID': '25141194699972686', 'time': '2023-11-05T05:03:41.363160153Z', 'type': 'MARKET_ORDER', 'instrument': 'EUR_USD', 'units': '1000', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '1.07355', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '1.07277', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '21', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '20', 'requestID': '25141194699972686', 'time': '2023-11-05T05:03:41.363160153Z', 'type': 'ORDER_CANCEL', 'orderID': '20', 'reason': 'MARKET_HALTED'}, 'relatedTransactionIDs': ['20', '21'], 'lastTransactionID': '21'}\n"
+            "1.07317    1.07296    1.07289    1.0731\n",
+            "{'orderCreateTransaction': {'id': '36', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '36', 'requestID': '61169999524891530', 'time': '2023-11-05T05:34:42.963243244Z', 'type': 'MARKET_ORDER', 'instrument': 'EUR_USD', 'units': '1', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '1.07317', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '1.07296', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '37', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '36', 'requestID': '61169999524891530', 'time': '2023-11-05T05:34:42.963243244Z', 'type': 'ORDER_CANCEL', 'orderID': '36', 'reason': 'MARKET_HALTED'}, 'relatedTransactionIDs': ['36', '37'], 'lastTransactionID': '37'}\n"
           ]
         }
       ],
       "source": [
         "trading_job()\n",
         "\n",
-        "#scheduler = BlockingScheduler()\n",
-        "#scheduler.add_job(trading_job, 'cron', day_of_week='mon-fri', hour='00-23', minute='1,16,31,46', start_date='2022-01-12 12:00:00', timezone='America/Chicago')\n",
-        "#scheduler.start()\n",
-        "#edit the fil"
+        "\n",
+        "# scheduler = BlockingScheduler()\n",
+        "# scheduler.add_job(trading_job, 'cron', day_of_week='mon-fri', hour='00-23', minute='1,16,31,46', start_date='2022-01-12 12:00:00', timezone='America/Chicago')\n",
+        "# scheduler.start()"
       ]
     },
     {
