--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 11,
       "metadata": {
         "id": "HDUx5opJso4E",
         "outputId": "7690265c-ce95-4865-8cca-03d60c47da16"
@@ -64,48 +64,48 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>2023-09-07 00:00:00</th>\n",
-              "      <td>1.072731</td>\n",
-              "      <td>1.072846</td>\n",
-              "      <td>1.072616</td>\n",
-              "      <td>1.072616</td>\n",
-              "      <td>1.072616</td>\n",
+              "      <th>2023-09-15 00:00:00</th>\n",
+              "      <td>1.064509</td>\n",
+              "      <td>1.064509</td>\n",
+              "      <td>1.064169</td>\n",
+              "      <td>1.064283</td>\n",
+              "      <td>1.064283</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2023-09-07 00:15:00</th>\n",
-              "      <td>1.072616</td>\n",
-              "      <td>1.072616</td>\n",
-              "      <td>1.072501</td>\n",
-              "      <td>1.072616</td>\n",
-              "      <td>1.072616</td>\n",
+              "      <th>2023-09-15 00:15:00</th>\n",
+              "      <td>1.064283</td>\n",
+              "      <td>1.064283</td>\n",
+              "      <td>1.064169</td>\n",
+              "      <td>1.064283</td>\n",
+              "      <td>1.064283</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2023-09-07 00:30:00</th>\n",
-              "      <td>1.072616</td>\n",
-              "      <td>1.072731</td>\n",
-              "      <td>1.072501</td>\n",
-              "      <td>1.072501</td>\n",
-              "      <td>1.072501</td>\n",
+              "      <th>2023-09-15 00:30:00</th>\n",
+              "      <td>1.064283</td>\n",
+              "      <td>1.064283</td>\n",
+              "      <td>1.064169</td>\n",
+              "      <td>1.064169</td>\n",
+              "      <td>1.064169</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2023-09-07 00:45:00</th>\n",
-              "      <td>1.072501</td>\n",
-              "      <td>1.072616</td>\n",
-              "      <td>1.072501</td>\n",
-              "      <td>1.072616</td>\n",
-              "      <td>1.072616</td>\n",
+              "      <th>2023-09-15 00:45:00</th>\n",
+              "      <td>1.064056</td>\n",
+              "      <td>1.064056</td>\n",
+              "      <td>1.063717</td>\n",
+              "      <td>1.063830</td>\n",
+              "      <td>1.063830</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2023-09-07 01:00:00</th>\n",
-              "      <td>1.072731</td>\n",
-              "      <td>1.072731</td>\n",
-              "      <td>1.072501</td>\n",
-              "      <td>1.072501</td>\n",
-              "      <td>1.072501</td>\n",
+              "      <th>2023-09-15 01:00:00</th>\n",
+              "      <td>1.063830</td>\n",
+              "      <td>1.064623</td>\n",
+              "      <td>1.063830</td>\n",
+              "      <td>1.064509</td>\n",
+              "      <td>1.064509</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -164,17 +164,17 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>3696 rows × 6 columns</p>\n",
+              "<p>3126 rows × 6 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
               "                         Open      High       Low     Close  Adj Close  Volume\n",
               "Datetime                                                                      \n",
-              "2023-09-07 00:00:00  1.072731  1.072846  1.072616  1.072616   1.072616       0\n",
-              "2023-09-07 00:15:00  1.072616  1.072616  1.072501  1.072616   1.072616       0\n",
-              "2023-09-07 00:30:00  1.072616  1.072731  1.072501  1.072501   1.072501       0\n",
-              "2023-09-07 00:45:00  1.072501  1.072616  1.072501  1.072616   1.072616       0\n",
-              "2023-09-07 01:00:00  1.072731  1.072731  1.072501  1.072501   1.072501       0\n",
+              "2023-09-15 00:00:00  1.064509  1.064509  1.064169  1.064283   1.064283       0\n",
+              "2023-09-15 00:15:00  1.064283  1.064283  1.064169  1.064283   1.064283       0\n",
+              "2023-09-15 00:30:00  1.064283  1.064283  1.064169  1.064169   1.064169       0\n",
+              "2023-09-15 00:45:00  1.064056  1.064056  1.063717  1.063830   1.063830       0\n",
+              "2023-09-15 01:00:00  1.063830  1.064623  1.063830  1.064509   1.064509       0\n",
               "...                       ...       ...       ...       ...        ...     ...\n",
               "2023-10-31 22:45:00  1.058089  1.058313  1.058089  1.058201   1.058201       0\n",
               "2023-10-31 23:00:00  1.058313  1.058313  1.058089  1.058089   1.058089       0\n",
@@ -182,10 +182,10 @@
               "2023-10-31 23:30:00  1.058201  1.058201  1.058089  1.058201   1.058201       0\n",
               "2023-10-31 23:45:00  1.058201  1.058201  1.058089  1.058201   1.058201       0\n",
               "\n",
-              "[3696 rows x 6 columns]"
+              "[3126 rows x 6 columns]"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -194,7 +194,7 @@
         "import yfinance as yf\n",
         "import pandas as pd\n",
         "\n",
-        "dataF = yf.download(\"EURUSD=X\", start=\"2023-9-7\", end=\"2023-11-1\", interval='15m')\n",
+        "dataF = yf.download(\"EURUSD=X\", start=\"2023-9-15\", end=\"2023-11-1\", interval='15m')\n",
         "dataF.iloc[:,:]\n",
         "#dataF.Open.iloc"
       ]
@@ -210,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 2,
       "metadata": {
         "id": "oh6erbtQso4H"
       },
@@ -251,7 +251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 3,
       "metadata": {
         "id": "-837Y7Elso4H",
         "outputId": "1456dcc4-0afe-48f1-cf77-c001ea7446a5"
@@ -261,13 +261,11 @@
           "data": {
             "text/plain": [
               "signal\n",
-              "0    3399\n",
-              "1     154\n",
-              "2     143\n",
+              "0    1\n",
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 33,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -288,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 4,
       "metadata": {
         "id": "vViuxkdHso4I"
       },
@@ -304,7 +302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 5,
       "metadata": {
         "id": "ztFBEJacso4J",
         "outputId": "00070d9d-023c-48c4-da73-8eacf43674d4"
@@ -336,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 13,
       "metadata": {
         "id": "YDvk2yOSso4J"
       },
@@ -375,7 +373,7 @@
         "\n",
         "    print(dfstream.iloc[:-1,:])\n",
         "    print(TPBuy, \"  \", SLBuy, \"  \", TPSell, \"  \", SLSell)\n",
-        "    signal = 2\n",
+        "    #signal = 2\n",
         "    #Sell\n",
         "    if signal == 1:\n",
         "        mo = MarketOrderRequest(instrument=\"EUR_USD\", units=-1000, takeProfitOnFill=TakeProfitDetails(price=TPSell).data, stopLossOnFill=StopLossDetails(price=SLSell).data)\n",
@@ -384,7 +382,7 @@
         "        print(rv)\n",
         "    #Buy\n",
         "    elif signal == 2:\n",
-        "        mo = MarketOrderRequest(instrument=\"EUR_USD\", units=1, takeProfitOnFill=TakeProfitDetails(price=TPBuy).data, stopLossOnFill=StopLossDetails(price=SLBuy).data)\n",
+        "        mo = MarketOrderRequest(instrument=\"EUR_USD\", units=1000, takeProfitOnFill=TakeProfitDetails(price=TPBuy).data, stopLossOnFill=StopLossDetails(price=SLBuy).data)\n",
         "        r = orders.OrderCreate(accountID, data=mo.data)\n",
         "        rv = client.request(r)\n",
         "        print(rv)"
@@ -401,31 +399,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 14,
       "metadata": {
         "id": "SgGFrNvOso4K"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "      Open    Close     High      Low\n",
-            "0  1.07267  1.07297  1.07297  1.07259\n",
-            "1  1.07297  1.07304  1.07320  1.07294\n",
-            "1.07317    1.07296    1.07289    1.0731\n",
-            "{'orderCreateTransaction': {'id': '36', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '36', 'requestID': '61169999524891530', 'time': '2023-11-05T05:34:42.963243244Z', 'type': 'MARKET_ORDER', 'instrument': 'EUR_USD', 'units': '1', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '1.07317', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '1.07296', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '37', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '36', 'requestID': '61169999524891530', 'time': '2023-11-05T05:34:42.963243244Z', 'type': 'ORDER_CANCEL', 'orderID': '36', 'reason': 'MARKET_HALTED'}, 'relatedTransactionIDs': ['36', '37'], 'lastTransactionID': '37'}\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "trading_job()\n",
+        "#trading_job()\n",
         "\n",
         "\n",
-        "# scheduler = BlockingScheduler()\n",
-        "# scheduler.add_job(trading_job, 'cron', day_of_week='mon-fri', hour='00-23', minute='1,16,31,46', start_date='2022-01-12 12:00:00', timezone='America/Chicago')\n",
-        "# scheduler.start()"
+        "scheduler = BlockingScheduler()\n",
+        "scheduler.add_job(trading_job, 'cron', day_of_week='mon-fri', hour='00-23', minute='1,16,31,46', start_date='2022-01-12 12:00:00', timezone='America/Chicago')\n",
+        "scheduler.start()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
