--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -302,7 +302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 45,
       "metadata": {
         "id": "ztFBEJacso4J",
         "outputId": "00070d9d-023c-48c4-da73-8eacf43674d4"
@@ -321,29 +321,29 @@
       "source": [
         "access_token= \"cd7e21b015cb734770f5fcfea9da9c9f-49a95de76ed5cab29ee0d33cee5f004d\"\n",
         "accountID = \"101-001-27332384-001\" #your account ID here\n",
-        "def get_candles(n):\n",
+        "list_of_currency = [Pair.EUR_USD, Pair.EUR_GBP, Pair.USD_JPY, Pair.AUD_USD, Pair.USD_CAD, Pair.CAD_JPY, Pair.NZD_USD]\n",
+        "def get_candles(n, currency):\n",
         "    client = CandleClient(access_token, real=False)\n",
-        "    collector = client.get_collector(Pair.EUR_USD, Gran.M15)\n",
+        "    collector = client.get_collector(currency, Gran.M15)\n",
         "    candles = collector.grab(n)\n",
         "    return candles\n",
         "\n",
-        "candles = get_candles(3)\n",
+        "candles = get_candles(3, Pair.EUR_USD)\n",
         "for candle in candles:\n",
         "    print(float(str(candle.bid.o))>1)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "YDvk2yOSso4J"
       },
       "outputs": [],
       "source": [
-        "def trading_job():\n",
-        "    candles = get_candles(3)\n",
+        "def trading_job(currency, string_currency):\n",
+        "    candles = get_candles(3, currency)\n",
         "    dfstream = pd.DataFrame(columns=['Open','Close','High','Low'])\n",
-        "\n",
         "    i=0\n",
         "    for candle in candles:\n",
         "        dfstream.loc[i, ['Open']] = float(str(candle.bid.o))\n",
@@ -358,8 +358,8 @@
         "    dfstream['Low'] = dfstream['Low'].astype(float)\n",
         "\n",
         "    signal = signal_generator(dfstream.iloc[:-1,:])#\n",
-        "\n",
         "    # EXECUTING ORDERS\n",
+        "    print(\"signal\" + signal)\n",
         "    client = API(access_token)\n",
         "\n",
         "    SLTPRatio = 2.\n",
@@ -376,49 +376,38 @@
         "    #signal = 2\n",
         "    #Sell\n",
         "    if signal == 1:\n",
-        "        mo = MarketOrderRequest(instrument=\"EUR_USD\", units=-1000, takeProfitOnFill=TakeProfitDetails(price=TPSell).data, stopLossOnFill=StopLossDetails(price=SLSell).data)\n",
+        "        mo = MarketOrderRequest(instrument=string_currency, units=-1000, takeProfitOnFill=TakeProfitDetails(price=TPSell).data, stopLossOnFill=StopLossDetails(price=SLSell).data)\n",
         "        r = orders.OrderCreate(accountID, data=mo.data)\n",
         "        rv = client.request(r)\n",
         "        print(rv)\n",
         "    #Buy\n",
         "    elif signal == 2:\n",
-        "        mo = MarketOrderRequest(instrument=\"EUR_USD\", units=1000, takeProfitOnFill=TakeProfitDetails(price=TPBuy).data, stopLossOnFill=StopLossDetails(price=SLBuy).data)\n",
+        "        mo = MarketOrderRequest(instrument=string_currency, units=1000, takeProfitOnFill=TakeProfitDetails(price=TPBuy).data, stopLossOnFill=StopLossDetails(price=SLBuy).data)\n",
         "        r = orders.OrderCreate(accountID, data=mo.data)\n",
         "        rv = client.request(r)\n",
         "        print(rv)"
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "oZdxbGm-so4K"
-      },
-      "source": [
-        "### 4 - Executing orders automatically with a scheduler"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 67,
       "metadata": {
         "id": "SgGFrNvOso4K"
       },
       "outputs": [],
       "source": [
-        "#trading_job()\n",
+        "list_of_currency = [Pair.EUR_USD, Pair.EUR_GBP, Pair.USD_JPY, Pair.AUD_USD, Pair.USD_CAD, Pair.CAD_JPY, Pair.NZD_USD]\n",
+        "list_of_str_currency = [\"EUR_USD\", \"EUR_GBP\", \"USD_JPY\", \"AUD_USD\",\"USD_CAD\",\"CAD_JPY\",\"NZD_USD\"]\n",
+        "\n",
+        "# for i in range (len(list_of_str_currency)):\n",
+        "#     trading_job(list_of_currency[i],list_of_str_currency[i])\n",
         "\n",
         "\n",
         "scheduler = BlockingScheduler()\n",
-        "scheduler.add_job(trading_job, 'cron', day_of_week='mon-fri', hour='00-23', minute='1,16,31,46', start_date='2022-01-12 12:00:00', timezone='America/Chicago')\n",
+        "for i in range (len(list_of_str_currency)):\n",
+        "    scheduler.add_job(trading_job, 'cron', args = [list_of_currency[i],list_of_str_currency[i]], day_of_week='mon-fri', hour='00-23', minute='1,16,31,46', start_date='2022-01-12 12:00:00',)\n",
         "scheduler.start()"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "code",
