--- a/VWAP_Scalping_01.ipynb
+++ b/VWAP_Scalping_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "33303e37",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "[225086 rows x 6 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "c3f880ce",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
        "224989"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "d3eb031c",
    "metadata": {},
    "outputs": [
@@ -203,18 +203,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/3882960619.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/3882960619.py:2: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[\"VWAP\"]=ta.vwap(df.High, df.Low, df.Close, df.Volume)\n",
-      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/3882960619.py:3: SettingWithCopyWarning: \n",
+      "\n",
+      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/3882960619.py:3: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['RSI']=ta.rsi(df.Close, length=16)\n"
+      "\n"
      ]
     }
    ],
@@ -228,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "6d2cc33a",
    "metadata": {},
    "outputs": [
@@ -236,10 +240,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/1708043003.py:8: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  if max(df.Open[i], df.Close[i])>=df.VWAP[i]:\n",
-      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/1708043003.py:10: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  if min(df.Open[i], df.Close[i])<=df.VWAP[i]:\n"
+      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/1708043003.py:8: FutureWarning:\n",
+      "\n",
+      "Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "\n",
+      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/1708043003.py:10: FutureWarning:\n",
+      "\n",
+      "Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "\n"
      ]
     }
    ],
@@ -267,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "9a9981d6",
    "metadata": {},
    "outputs": [
@@ -275,18 +283,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/2761151124.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  if (df.VWAPSignal[l]==2\n",
-      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/2761151124.py:6: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  if (df.VWAPSignal[l]==1\n",
-      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/2761151124.py:7: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  and df.Close[l]>=df['BBU_14_2.0'][l]\n",
-      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/2761151124.py:3: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  and df.Close[l]<=df['BBL_14_2.0'][l]\n",
-      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/2761151124.py:4: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  and df.RSI[l]<45):\n",
-      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/2761151124.py:8: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  and df.RSI[l]>55):\n"
+      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/2761151124.py:2: FutureWarning:\n",
+      "\n",
+      "Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "\n",
+      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/2761151124.py:6: FutureWarning:\n",
+      "\n",
+      "Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "\n",
+      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/2761151124.py:7: FutureWarning:\n",
+      "\n",
+      "Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "\n",
+      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/2761151124.py:3: FutureWarning:\n",
+      "\n",
+      "Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "\n",
+      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/2761151124.py:4: FutureWarning:\n",
+      "\n",
+      "Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "\n",
+      "/var/folders/k2/1_w7z8xn0fb3dh35c1nd4k5c0000gn/T/ipykernel_30254/2761151124.py:8: FutureWarning:\n",
+      "\n",
+      "Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "\n"
      ]
     }
    ],
@@ -310,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "65435b94",
    "metadata": {},
    "outputs": [
@@ -334,7 +354,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "e7080a9a",
    "metadata": {},
    "outputs": [],
@@ -364,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "0d0e2a76",
    "metadata": {
     "scrolled": false
@@ -414,12 +434,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "id": "6083727a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfpl = df[:75000].copy()\n",
+    "dfpl = df[:250000].copy()\n",
     "import pandas_ta as ta\n",
     "dfpl['ATR']=ta.atr(dfpl.High, dfpl.Low, dfpl.Close, length=7)\n",
     "#help(ta.atr)\n",
@@ -429,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "id": "81219ec4",
    "metadata": {},
    "outputs": [
@@ -437,39 +457,39 @@
      "data": {
       "text/plain": [
        "Start                     2019-09-30 00:00:00\n",
-       "End                       2020-09-30 04:25:00\n",
-       "Duration                    366 days 04:25:00\n",
-       "Exposure Time [%]                    6.694667\n",
-       "Equity Final [$]                   172.713956\n",
-       "Equity Peak [$]                    173.665736\n",
-       "Return [%]                          72.713956\n",
-       "Buy & Hold Return [%]                7.246403\n",
-       "Return (Ann.) [%]                   53.432392\n",
-       "Volatility (Ann.) [%]               25.126177\n",
-       "Sharpe Ratio                         2.126563\n",
-       "Sortino Ratio                        5.880902\n",
-       "Calmar Ratio                         5.285867\n",
-       "Max. Drawdown [%]                   -10.10854\n",
-       "Avg. Drawdown [%]                   -0.707265\n",
-       "Max. Drawdown Duration       53 days 00:40:00\n",
-       "Avg. Drawdown Duration        1 days 19:34:00\n",
-       "# Trades                                  713\n",
-       "Win Rate [%]                        48.527349\n",
+       "End                       2022-09-30 20:55:00\n",
+       "Duration                   1096 days 20:55:00\n",
+       "Exposure Time [%]                    6.535875\n",
+       "Equity Final [$]                   297.296038\n",
+       "Equity Peak [$]                    313.474142\n",
+       "Return [%]                         197.296038\n",
+       "Buy & Hold Return [%]              -10.401623\n",
+       "Return (Ann.) [%]                   33.515903\n",
+       "Volatility (Ann.) [%]               20.282087\n",
+       "Sharpe Ratio                         1.652488\n",
+       "Sortino Ratio                        3.861755\n",
+       "Calmar Ratio                         2.656332\n",
+       "Max. Drawdown [%]                  -12.617361\n",
+       "Avg. Drawdown [%]                   -0.806062\n",
+       "Max. Drawdown Duration      280 days 14:40:00\n",
+       "Avg. Drawdown Duration        3 days 01:08:00\n",
+       "# Trades                                 2067\n",
+       "Win Rate [%]                        45.766812\n",
        "Best Trade [%]                        0.42012\n",
        "Worst Trade [%]                      -0.27659\n",
-       "Avg. Trade [%]                       0.007964\n",
-       "Max. Trade Duration           2 days 05:30:00\n",
-       "Avg. Trade Duration           0 days 00:47:00\n",
-       "Profit Factor                        1.346955\n",
-       "Expectancy [%]                       0.007989\n",
-       "SQN                                   2.84368\n",
+       "Avg. Trade [%]                       0.005507\n",
+       "Max. Trade Duration           2 days 11:15:00\n",
+       "Avg. Trade Duration           0 days 00:51:00\n",
+       "Profit Factor                        1.241496\n",
+       "Expectancy [%]                       0.005527\n",
+       "SQN                                    3.4211\n",
        "_strategy                             MyStrat\n",
        "_equity_curve                             ...\n",
-       "_trades                        Size  Entry...\n",
+       "_trades                         Size  Entr...\n",
        "dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
