bound still too tight

--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -341,6 +341,62 @@
             "signal: -\n",
             "signal: -\n",
             "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -signal: -\n",
+            "signal: -\n",
+            "\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "\n",
+            "signal: -\n",
+            "signal: -\n",
             "signal: -\n"
           ]
         }
@@ -356,7 +412,8 @@
         "scheduler = BlockingScheduler()\n",
         "for i in range (len(list_of_str_currency)):\n",
         "    scheduler.add_job(trading_job, 'cron', args = [list_of_currency[i],list_of_str_currency[i]], day_of_week='mon-fri', hour='00-23', minute='1,11,21,31,41,51', start_date='2022-01-12 12:00:00')\n",
-        "scheduler.start()"
+        "scheduler.start()\n",
+        "#ADD RANDOM"
       ]
     },
     {
